# nfpm-cgo

./: Cargo.toml
src/go/: go.mod  go.sum
