[package]
name = "nfpm-cgo"
version = "0.1.1"
edition = "2024"
description = "A Rust wrapper for the nFPM Go library for creating .deb and .rpm packages."
license = "MIT"
repository = "https://github.com/koca-build/nfpm-cgo"
homepage = "https://github.com/koca-build/nfpm-cgo"
keywords = ["nfpm", "packaging", "deb", "rpm", "cgo"]
categories = ["development-tools", "os"]

[dependencies]

[build-dependencies]
bindgen = "0.72.0"
